# qin

./: deploy.sh
.agent/rules/: common.md  language.md
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/router/: index.ts
admin/src/: App.vue
admin/src/router/: index.ts
admin/src/stores/: auth.ts
admin/src/views/: Dashboard.vue  Login.vue
app/: capacitor.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
app/android/: capacitor.settings.gradle
app/android/app/: build.gradle  capacitor.build.gradle
app/src/: App.vue  style.css
app/src/audio/: AudioEngine.js
app/src/components/: PerformanceBar.vue  ScoreViewer.vue  Tuner.vue
app/src/config/: alphaTabConfig.js
app/src/router/: index.ts
gtp/: pnpm-lock.yaml  vite.config.ts
guitar-practice-app/: index.html  package-lock.json  package.json  vite.config.ts
guitar-practice-app/src/: App.vue  style.css
guitar-pro/: .gitignore  design.md  generate_arrows.py  pyproject.toml
guitar-pro/scripts/: debug_canon_simulation.py  verify_rmvpe.py
guitar-pro/src/: __init__.py
practice/: README.md  design.md  pyproject.toml
practice/scripts/: download_alphatab.py
practice/src/: main.py
practice/src/audio/: __init__.py  audio_io.py
practice/src/engine/: practice.py
practice/src/mir/: alignment.py  preprocessor.py  rmvpe.py
practice/src/ui/: main_window.py  score_viewer.html
server/: .env  .env.example  database.sqlite  package-lock.json  package.json  pnpm-lock.yaml  test_require.js
server/src/: db.js  index.js  init-db.js
(+35 files in other folders)
